Fixed Twitter Spaces layout on mobile devices.

--- a/FrontEnd/styles/home.scss
+++ b/FrontEnd/styles/home.scss
@@ -161,4 +161,8 @@
   .twitter_profile {
     text-align: right;
   }
+
+  @media screen and (max-width: $mobile-breakpoint) {
+    margin-left: 20px;
+  }
 }
